# OmniPost

./: .gitignore  README.md  combined_text.txt  extract_original_text.py
.cursor/rules/: regionapi.mdc
aigc-AdGraph-front/: gradle.properties  settings.gradle.kts
aigc-AdGraph-front/app/: build.gradle.kts
hw3_DiceRoller/: settings.gradle.kts
hw3_DiceRoller/app/: build.gradle.kts
part1_graph_generate/: readme.md
part1_graph_generate/demo/: .gitignore  gemini_test.py
part1_graph_generate/demo/crewai/adgraph_crew/: README.md  pyproject.toml  report.md
part1_graph_generate/demo/crewai/adgraph_crew/output/: report.md
part1_graph_generate/demo/crewai/adgraph_crew/src/adgraph/: crew.py  main.py
part1_graph_generate/demo/crewai/adgraph_crew/src/adgraph/config/: tasks.yaml
part2_textSpilt_graphGenerate/: .env  Models.py  demo001.py  main.py  novel_handle.py  picture_prompt.py  prompt_templates.py  requirements.txt  role_extract.py  role_image_generator.py  scene_extract.py  scene_image_generator.py  stable_diffusion.py  test.py  test_gemini_api.py  textSpilt001.py  提示词汇总.md  豆包生图.py
part2_textSpilt_graphGenerate/files/: 测试001.txt
part2_textSpilt_graphGenerate/novel_trans_image_API/: API_文档.md  LLM_Change.py  LLM_Choose.py  Novel_Handel_Api.py  README.md  Role_Extract_API.py  SD_Image.py  Scene_Excrat.py  config.yaml  main_api.py  prompt_templates.py  test.py
part2_textSpilt_graphGenerate/role_message/: character_archive.json  novel_scenes.json  scene_prompts.json
part3_browser_use/: .env  playwright_2.py  weihua_playwright.py  weihua_test.py
(+66 files in other folders)
