[project]
name = "adgraph"
version = "0.1.0"
description = "adgraph using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
adgraph = "adgraph.main:run"
run_crew = "adgraph.main:run"
train = "adgraph.main:train"
replay = "adgraph.main:replay"
test = "adgraph.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
